<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CardActivity">

    <ImageView
        android:id="@+id/scoutImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_scout" />

    <RelativeLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/scoutImage"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/scoutImage">

        <TextView
            android:id="@+id/scoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scoutRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoutName"
            android:text="@string/placeholder_role" />

        <TextView
            android:id="@+id/scoutPatrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoutRole"
            android:text="@string/placeholder_patrol"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoutSummary"
            android:layout_below="@id/scoutPatrol"
            android:text="@string/placeholder_summary"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true" />


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add"
        android:focusable="true"
        android:contentDescription="@string/add_button_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoutImage"
        android:id="@+id/scoutNotes"
        />


</RelativeLayout>
